Documentation et corrections
